--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#111827">
-  <title>Business Card Scanner (PWA)</title>
-  <link rel="manifest" href="manifest.webmanifest">
-  <link rel="apple-touch-icon" href="icons/icon-192.png">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="description" content="Scan business cards to contacts/CSV/Excel/VCF. Works offline as a PWA.">
-  <!-- Tailwind via CDN (works offline after first load via SW pre-cache) -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#111827" />
+  <title>Business Card Scanner — PWA</title>
+  <link rel="manifest" href="manifest.webmanifest" />
+  <link rel="apple-touch-icon" href="icons/icon-192.png" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="description" content="Scan business cards → contacts/CSV/Excel/VCF. Works offline & installable." />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50 text-gray-900">
@@ -18,20 +17,17 @@
     <div class="max-w-6xl mx-auto flex items-center justify-between gap-4">
       <div>
         <h1 class="text-2xl font-bold">Business Card Scanner — PWA</h1>
-        <p class="text-sm text-gray-600 mt-1">Muat naik kad ➜ OCR ➜ semak ➜ eksport CSV/Excel/VCF. Boleh install macam app.</p>
+        <p class="text-sm text-gray-600 mt-1">Muat naik kad ➜ OCR (Optiic) ➜ semak ➜ export CSV/Excel/VCF.</p>
       </div>
       <button id="installBtn" class="px-4 py-2 rounded-xl bg-black text-white hidden">Install App</button>
     </div>
   </header>
 
   <main class="max-w-6xl mx-auto p-6 grid grid-cols-1 lg:grid-cols-2 gap-6">
-    <!-- Upload & OCR panel -->
     <section class="bg-white rounded-2xl shadow p-6">
       <h2 class="text-lg font-semibold mb-4">1) Muat naik kad bisnes</h2>
-      <div
-        id="dropzone"
-        class="border-2 border-dashed rounded-xl p-6 text-center cursor-pointer hover:bg-gray-50">
-        <input id="fileInput" type="file" accept="image/*" class="hidden"/>
+      <div id="dropzone" class="border-2 border-dashed rounded-xl p-6 text-center cursor-pointer hover:bg-gray-50">
+        <input id="fileInput" type="file" accept="image/*" class="hidden" />
         <p class="mb-2 font-medium">Klik di sini atau seret & lepas gambar kad</p>
         <p class="text-xs text-gray-500">Disokong: JPG, PNG, HEIC (ikut pelayar)</p>
       </div>
@@ -39,7 +35,7 @@
       <div id="previewWrap" class="mt-4 grid grid-cols-1 md:grid-cols-2 gap-4 hidden">
         <div>
           <p class="text-sm font-semibold mb-2">Pratonton</p>
-          <img id="preview" class="w-full rounded-xl shadow" alt="Card preview"/>
+          <img id="preview" class="w-full rounded-xl shadow" alt="Card preview" />
         </div>
         <div>
           <p class="text-sm font-semibold mb-2">Hasil OCR</p>
@@ -48,7 +44,7 @@
             <div class="w-full bg-gray-200 rounded-full h-2">
               <div id="progressBar" class="bg-gray-800 h-2 rounded-full transition-all" style="width:0%"></div>
             </div>
-            <p class="text-xs text-gray-500 mt-1" id="progressLabel">Memproses OCR… 0%</p>
+            <p class="text-xs text-gray-500 mt-1" id="progressLabel">Memproses OCR…</p>
           </div>
           <button id="addBtn" class="mt-3 px-4 py-2 rounded-xl bg-black text-white disabled:opacity-50">Tambah ke Senarai ➜</button>
         </div>
@@ -56,7 +52,6 @@
       <p class="text-xs text-gray-500 mt-3">Tip: Gambar jelas, flat, pencahayaan terang = OCR lebih tepat.</p>
     </section>
 
-    <!-- Table panel -->
     <section class="bg-white rounded-2xl shadow p-6">
       <div class="flex items-center justify-between mb-4">
         <h2 class="text-lg font-semibold">2) Semak & Betulkan</h2>
@@ -86,7 +81,6 @@
       </div>
     </section>
 
-    <!-- Tips -->
     <section class="bg-white rounded-2xl shadow p-6 lg:col-span-2">
       <h2 class="text-lg font-semibold mb-2">Cara import ke Contact / CRM</h2>
       <ol class="list-decimal pl-5 space-y-1 text-sm text-gray-700">
@@ -95,21 +89,14 @@
         <li><b>Android</b>: Contacts → Import from .vcf.</li>
         <li><b>CRM/Airtable/Notion</b>: Import CSV.</li>
       </ol>
-      <p class="text-xs text-gray-500 mt-3">Nota: Semua proses client-side. Untuk OCR lebih tepat, boleh integrasi Google Vision / AWS Textract.</p>
     </section>
   </main>
 
-  <!-- Libs -->
-  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
-  <!-- App -->
   <script src="app.js"></script>
-  <!-- Service worker register -->
   <script>
     if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
-        navigator.serviceWorker.register('./sw.js');
-      });
+      window.addEventListener('load', () => navigator.serviceWorker.register('./sw.js'));
     }
   </script>
 </body>
